165 - added user role in members